# Computer-Vision

./: .gitignore  open-sesame.py  project_output_test.ipynb
Module 2/: Assignment2_c.ipynb  Module-2_Submission.ipynb  SUBMISSION-FILE_Module2.ipynb  Untitled  assignment2.ipynb  assignment2_b.ipynb  camera_intrinsics.npz  camera_intrinsics_phone.npz
Modulel 3/: module-3-experimentation.ipynb
Project/: config.py  landmarks.py  main.py  pose_processor.py  project1.ipynb  pyproject.toml  state.py  whole-body-plus-ankle.py
Project/Vestigial/: walk_knee_angles.py  whole-body.py
Project/ui/: __init__.py  console.py  drawing.py  timeline.py
Project/visualization/: __init__.py  clip_preview.py  polar_plot.py  skeleton.py
