[project]
name = "gait-iris"
version = "0.1.0"
description = "Pose dashboard with MediaPipe: angle tracking, recording, polar plot"
authors = [
    {name = "DongbaekDreams"}
]
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.8",
    "numpy>=1.24",
    "mediapipe>=0.10",
]

[project.scripts]
gait = "main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
